# aitools

./: CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  acpi.asm  apic.asm  boot_defs_temp.inc  fat32.asm  gdt_uefi.asm  idt64_uefi.asm  keyboard.asm  main_uefi_loader.asm  paging64_uefi.asm  pci.asm  pmm64_uefi.asm  screen_gop.asm  shell.asm
UniversalLLMClient/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  UniversalLLMClient.sln  UniversalLLMClient.vcxproj  UniversalLLMClient.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
UniversalLLMClient/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
UniversalLLMClient/UniversalLLMClient.dir/Debug/Universa.8FD1102A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
UniversalLLMClient/UniversalLLMClient_autogen/include_Debug/4ALMVLFJEY/: moc_terminal_process_handler.cpp
UniversalLLMClient/UniversalLLMClient_autogen/include_Debug/7ITXASIFHM/: moc_gemini_service.cpp  moc_llm_service.cpp  moc_ollama_service.cpp  moc_openai_compatible_service.cpp
UniversalLLMClient/UniversalLLMClient_autogen/include_Debug/CJANC5JBUJ/: moc_orchestrator_manager.cpp
UniversalLLMClient/UniversalLLMClient_autogen/include_Debug/UYX5XTB5RZ/: moc_mainwindow.cpp
UniversalLLMClient/command_lib/: command_library.cpp  command_library.h
UniversalLLMClient/common/: types.h
UniversalLLMClient/llm_services/: gemini_service.cpp  gemini_service.h  llm_service.cpp  llm_service.h  ollama_service.cpp  ollama_service.h  openai_compatible_service.cpp  openai_compatible_service.h
UniversalLLMClient/logging/: session_logger.cpp  session_logger.h
UniversalLLMClient/orchestration/: orchestrator_manager.cpp  orchestrator_manager.h
UniversalLLMClient/terminal_interaction/: terminal_process_handler.cpp  terminal_process_handler.h
UniversalLLMClient/ui/: main.cpp  mainwindow.cpp  mainwindow.h
UniversalLLMClient/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
UniversalLLMClient/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
UniversalLLMClient_autogen/include_Debug/UYX5XTB5RZ/: moc_mainwindow.cpp
command_lib/: command_library.cpp  command_library.h
llm_services/: gemini_service.cpp  gemini_service.h  llm_service.cpp  llm_service.h  ollama_service.cpp  ollama_service.h  openai_compatible_service.cpp  openai_compatible_service.h
logging/: session_logger.cpp  session_logger.h
orchestration/: orchestrator_manager.cpp  orchestrator_manager.h
terminal_interaction/: terminal_process_handler.cpp  terminal_process_handler.h
ui/: main.cpp  mainwindow.cpp  mainwindow.h
universal_llm_client_autogen/: mocs_compilation_Debug.cpp
universal_llm_client_autogen/include_Debug/4ALMVLFJEY/: moc_terminal_process_handler.cpp
universal_llm_client_autogen/include_Debug/7ITXASIFHM/: moc_gemini_service.cpp  moc_llm_service.cpp  moc_ollama_service.cpp  moc_openai_compatible_service.cpp
universal_llm_client_autogen/include_Debug/CJANC5JBUJ/: moc_orchestrator_manager.cpp
universal_llm_client_autogen/include_Debug/UYX5XTB5RZ/: moc_mainwindow.cpp
